<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/imageBackFromSettings"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_back"
        app:tint="@color/white"
        android:padding="@dimen/_2sdp"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/_24sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/advent_pro_bold"
        android:textAlignment="center"
        android:padding="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/writeToUsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/rateLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/any_suggestion_write_to_us"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:padding="@dimen/_2sdp"
            android:fontFamily="@font/advent_pro_medium"
            android:textSize="@dimen/_18ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:weightSum="2"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintTop_toBottomOf="@id/textSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rate_us"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:padding="@dimen/_2sdp"
            android:fontFamily="@font/advent_pro_medium"
            android:textSize="@dimen/_18ssp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>